--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn=20.1.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+psycopg2-binary==2.9.3
 SQLAlchemy==1.3.19
 Werkzeug==1.0.1
 WTForms==3.0.1
